--- a/requirements.txt
+++ b/requirements.txt
@@ -146,6 +146,7 @@ rfc3986-validator==0.1.1
 rpds-py==0.22.3
 scikit-learn==1.6.1
 scipy==1.15.2
+sentence-transformers==2.2.2
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==75.6.0
